--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -608,7 +608,7 @@ padding-top:50px;
 // Our Projects
 .our-projects {
   padding: 70px 0;
-  background-image: url('http://via.placeholder.com/1950x1097');
+  background-image: url('../images/slider/slide1.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -626,7 +626,7 @@ padding-top:50px;
 // Our Clients & Free Quotes
 .our-clients-free-quotes {
   padding: 70px 0;
-  background-image: url('http://via.placeholder.com/1920x1080');
+  background-image: url('../images/slider/slide1.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
