atualização quem somos

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -111,7 +111,7 @@ header.navigation {
 
 /*___________________   Title Bar____________________________*/
 .wd-title-bar {
-  background: url("http://via.placeholder.com/2030x365") no-repeat center center;
+  background: url("../images/slider/slide3.jpg") no-repeat center center;
   min-height: 289px;
   padding-top: 150px;
   .single-portfolio & {
