--- a/stylesheets/backgroundimage.css
+++ b/stylesheets/backgroundimage.css
@@ -1,6 +1,6 @@
 .projects {
   padding: 70px 0;
-  background-image: url("../images/slider/slide2.jpg");
+  background-image: url("");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
