--- a/stylesheets/flexslider.css
+++ b/stylesheets/flexslider.css
@@ -46,10 +46,13 @@
 }
 .flexslider .slides > li {
   display: none;
+  top: 0px;
+  bottom: 0px
   -webkit-backface-visibility: hidden;
 }
 .flexslider .slides img {
   width: 100%;
+  height: 100%
   display: block;
 }
 .flexslider .slides:after {
@@ -84,7 +87,7 @@ html[xmlns] .flexslider .slides {
   -moz-user-select: none;
 }
 .flex-viewport {
-  max-height: 2000px;
+  max-height: 515px;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
