ajuste em css das paginas

--- a/scss/components/_bouton.scss
+++ b/scss/components/_bouton.scss
@@ -4,7 +4,7 @@
 }
 
 .wd-bouton {
-    background-color: #fe5b10;
+    background-color: #dc1515;
     font-size: 14px;
     font-weight: 700;
     padding: 11.5px 10px;
