--- a/stylesheets/sections.css
+++ b/stylesheets/sections.css
@@ -1,16 +1,21 @@
 section.call-to-action-wrapper1 {
   padding: 70px 0;
-  background-color: #e81130;
+  background-color: #dc1515;
 }
 
  section.slider .flexslider .flex-viewport .slides li .row .slider-caption a {
     transition: all .5s ease-in-out;
     display: inline-block;
     padding: 12px 30px;
-    background-color: #e81130;
+    background-color: #dc1515;
     color: #FFF;
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
+}
+
+// Our Services
+section.our-services1 {
+  padding: 10px 0;
 }
