atualizações catalogo de produtos

--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -704,7 +704,7 @@ padding-top:50px;
 // Facts
 .facts {
   padding: 100px 0;
-  background-image: url('images/slider/slide4.jpg');
+  background-image: url('images/nossos_numeros.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
