--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -987,7 +987,7 @@ padding-top:50px;
                   display: block;
                   height: 3px;
                   width: 70px;
-                  background-color: #00bbff;
+                  background-color: #ff0000;
                   margin-top: 20px;
                 }
               }
