--- a/scss/components/menu/_menu-creative.scss
+++ b/scss/components/menu/_menu-creative.scss
@@ -14,6 +14,9 @@
     transform: translateY(0);
     display: block;
   }
+  li>a:hover {
+    color: #B6702A;
+    border-bottom: 1px solid #B6702A;	
 }
 
 .fixed section.creative .menu-item .sub-menu {
@@ -222,7 +225,7 @@ section.creative {
     font-weight: 600;
 		&:hover {
       border-bottom: 1px solid;
-      color: #282828;
+      color: #ff0000;
       transition: all .2s ease;
 		}
 	}
