--- a/stylesheets/custom-style.css
+++ b/stylesheets/custom-style.css
@@ -110,6 +110,7 @@ a:hover, a:focus {
 }
 .creative-layout .fixed .top-bar-section ul li > a:hover, .creative-layout .fixed .top-bar-section ul li.active_menu > a {
   color: rgba(232, 17, 48,1);
+  border-bottom: 1px solid rgba(232, 17, 48,1);
 }
 .call-to-action-wrapper {
   padding: 70px 0;
