--- a/stylesheets/owl.carousel.css
+++ b/stylesheets/owl.carousel.css
@@ -27,11 +27,11 @@
     position: relative;
     overflow: hidden;
     /* fix for flashing background */
-    -webkit-transform: translate3d(0px, 0px, 0px); }
+    -webkit-transform: translate3d(100px, 0px, 0px); }
   .owl-carousel .owl-item {
     position: relative;
     min-height: 1px;
-    float: left;
+    float: height;
     -webkit-backface-visibility: hidden;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none; }
